# MetaOS-Controller

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  dockerfile
.github/: package.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
client/: CMakeLists.txt
client/include/: client_system.hh
client/src/: client.cc  client_system.cc  main.cc
proto/: system.proto
proto/proto/: system.grpc.pb.cc  system.grpc.pb.h  system.pb.cc  system.pb.h
server/: CMakeLists.txt  main.cc
server/cicd_controller/include/: cicd_controller.hh
server/cicd_controller/src/: cicd_controller.cc
server/include/: system.hh
server/shell_controller/include/: shell_controller.hh  system.hh
server/shell_controller/src/: shell_controller.cc  system.cc
server/src/: main.cc  server.cc  system.cc
server/test/: CMakeLists.txt  system_test.cc
src/: server.cc  system.cc
tests/: CMakeLists.txt  system_test.cc
